# stripe-dashboard

./: .coverage  .env.example  .gitignore  CLAUDE.md  DEPLOYMENT_STRATEGY.md  PRD.md  README.md  app.py  app_original.py  borndate.txt  main.py  pyproject.toml  requirements.txt
.streamlit/: config.toml
analytics/: calculations.py  charts.py  fees.py
config/: settings.py
dashboard/: transactions.py
exports/: excel_export.py  pdf_export.py  sheets_export.py
models/: customer_data.py
services/: ai_service.py  cache_service.py  stripe_service.py
tests/: conftest.py
tests/fixtures/: stripe_fixtures.py
tests/integration/: test_dashboard_integration.py
tests/unit/analytics/: test_calculations.py
tests/unit/models/: test_customer_data.py
tests/unit/services/: test_stripe_service.py
utils/: formatters.py  helpers.py
