[project]
name = "stripe-dashboard"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.116.1",
    "pandas>=2.3.1",
    "plotly>=6.2.0",
    "python-dotenv>=1.1.1",
    "streamlit>=1.47.1",
    "stripe>=12.3.0",
    "uvicorn>=0.35.0",
    "gspread>=6.1.4",
    "google-auth>=2.35.0",
    "google-auth-oauthlib>=1.2.1",
    "anthropic>=0.40.0",
    "openpyxl>=3.1.5",
    "reportlab>=4.2.5",
]
